# tdmd_V2

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INDEX.md  LICENSE  README.md  TDMD_Engineering_Spec.md
.github/: CODEOWNERS  (+1 more)
src/cli/: CMakeLists.txt  explain_command.cpp  field_docs.cpp  main.cpp  run_command.cpp  validate_command.cpp
src/comm/: CMakeLists.txt  comm_backend.cpp  crc32.cpp  cuda_mpi_probe.cpp  deterministic_reduction.cpp  gpu_aware_mpi_backend.cpp  halo_packet_serializer.cpp  hybrid_backend.cpp  mpi_host_staging_backend.cpp  nccl_backend.cpp  nccl_probe.cpp  packet_serializer.cpp  ring_backend.cpp  topology_resolver.cpp
src/gpu/: CMakeLists.txt  cuda_handles.hpp  device_allocator.cpp  device_pool.cpp  eam_alloy_gpu.cu  eam_alloy_gpu_mixed.cu  factories.cpp  gpu_types.cpp  integrator_vv_gpu.cu  neighbor_list_gpu.cu  snap_bond_list_gpu.cu  snap_gpu.cu  snap_gpu_device.cuh  snap_gpu_mixed.cu  snap_gpu_tables.cu  snap_gpu_tables.cuh
src/integrator/: CMakeLists.txt  README.md  gpu_velocity_verlet.cpp  integrator.cpp  velocity_verlet.cpp
src/io/: CMakeLists.txt  lammps_data_reader.cpp  preflight.cpp  yaml_config.cpp
src/neighbor/: CMakeLists.txt  README.md  cell_grid.cpp  displacement_tracker.cpp  gpu_neighbor_builder.cpp  neighbor_list.cpp
src/perfmodel/: CMakeLists.txt  gpu_cost_tables.cpp  hardware_profile.cpp  perfmodel.cpp
src/potentials/: CMakeLists.txt  eam_alloy.cpp  eam_alloy_gpu_adapter.cpp  eam_file.cpp  eam_fs.cpp  morse.cpp  snap.cpp  snap_file.cpp  snap_gpu_adapter.cpp  tabulated.cpp
src/potentials/snap/: sna_engine.cpp
src/runtime/: CMakeLists.txt  README.md  gpu_context.cpp  simulation_engine.cpp  unit_converter.cpp
src/scheduler/: CMakeLists.txt  causal_wavefront_scheduler.cpp  certificate_store.cpp  concrete_outer_sd_coordinator.cpp  diagnostic_dump.cpp  event_log.cpp  gpu_dispatch_adapter.cpp  policy.cpp  safety_certificate.cpp  scheduler.cpp  zone_dag.cpp  zone_state_machine.cpp
src/state/: CMakeLists.txt  README.md  atom_soa.cpp  box.cpp  species.cpp
src/telemetry/: CMakeLists.txt  telemetry.cpp
src/zoning/: CMakeLists.txt  decomp2d.cpp  default_planner.cpp  hilbert.cpp  hilbert3d.cpp  linear1d.cpp  zoning.cpp
tests/: CMakeLists.txt
tests/cli/: CMakeLists.txt  test_explain_command.cpp  test_run_command.cpp  test_validate_command.cpp
tests/cli/fixtures/: cli_nve_toy.yaml
tests/comm/: CMakeLists.txt  main_mpi.cpp  test_comm_types.cpp  test_cuda_mpi_probe.cpp  test_gpu_aware_mpi_backend.cpp  test_halo_packet_serializer.cpp  test_hybrid_backend.cpp  test_mpi_host_staging_2rank.cpp  test_nccl_backend.cpp  test_nccl_probe.cpp  test_packet_serializer.cpp  test_ring_4rank.cpp  test_topology_resolver.cpp
tests/gpu/: CMakeLists.txt  main_mpi.cpp  test_bond_list_matches_cpu_stencil_order.cpp  test_device_pool.cpp  test_eam_alloy_gpu.cpp  test_eam_mixed_fast_within_threshold.cpp  test_gpu_types.cpp  test_integrator_vv_gpu.cpp  test_neighbor_list_gpu.cpp  test_nvtx_audit.cpp  test_overlap_budget.cpp  test_overlap_budget_2rank.cpp  test_snap_gpu_bit_exact.cpp  test_snap_gpu_functional.cpp  test_snap_gpu_plumbing.cpp  test_snap_mixed_fast_within_threshold.cpp  test_t4_nve_drift.cpp
tests/integration/m1_smoke/: README.md  al_fcc_500_10steps_golden.txt  run_al_morse_smoke.sh  setup.data  (+1 more)
tests/integrator/: CMakeLists.txt  test_integrator.cpp  test_velocity_verlet.cpp
tests/io/: CMakeLists.txt  test_lammps_data_reader.cpp  test_preflight.cpp  test_yaml_config.cpp
tests/neighbor/: CMakeLists.txt  test_cell_grid.cpp  test_displacement_fuzz.cpp  test_displacement_tracker.cpp  test_neighbor_list.cpp
tests/perfmodel/: CMakeLists.txt  test_gpu_cost_calibration.cpp  test_gpu_cost_tables.cpp  test_perfmodel.cpp  test_perfmodel_pattern2.cpp
tests/potentials/: CMakeLists.txt  test_eam_alloy.cpp  test_eam_file.cpp  test_eam_fs.cpp  test_lammps_oracle_snap_fixture.cpp  test_morse.cpp  test_snap_compute.cpp  test_snap_file.cpp  test_tabulated.cpp
tests/runtime/: CMakeLists.txt  main_mpi.cpp  test_gpu_2rank_smoke.cpp  test_gpu_backend_smoke.cpp  test_gpu_context.cpp  test_k1_regression_smoke.cpp  test_multirank_td_smoke_2rank.cpp  test_pattern2_engine_wire.cpp  test_simulation_engine.cpp  test_td_mode_smoke.cpp  test_unit_converter.cpp  test_unit_converter_lj.cpp
tests/scheduler/: CMakeLists.txt  fuzz_cert_monotonicity.cpp  fuzz_frontier_invariant.cpp  fuzz_k_batching_invariants.cpp  fuzz_zone_state_invariants.cpp  main_mpi.cpp  test_commit_protocol.cpp  test_deadlock_watchdog.cpp  test_determinism_same_seed.cpp  test_k_batching_pipeline.cpp  test_outer_sd_coordinator.cpp  test_pattern2_boundary_dep.cpp  test_peer_dispatch_2rank.cpp  test_queue_ordering_determinism.cpp  test_retry_canonical.cpp  test_safety_certificate.cpp  test_scheduler_core.cpp  test_scheduler_types.cpp  test_select_ready_tasks.cpp  test_zone_state_machine.cpp
tests/state/: CMakeLists.txt  test_atom_soa.cpp  test_box.cpp  test_species.cpp
tests/telemetry/: CMakeLists.txt  test_telemetry.cpp
tests/zoning/: CMakeLists.txt  fuzz_corpus.hpp  test_decomp2d.cpp  test_default_planner.cpp  test_hilbert.cpp  test_hilbert3d.cpp  test_linear1d.cpp  test_linear_1d_scheme.cpp  test_zoning_anchor.cpp  test_zoning_property.cpp  test_zoning_types.cpp
verify/: CMakeLists.txt  compare.py
verify/harness/: __init__.py  differential_runner.py
verify/measurements/: gpu_cost_calibration.yaml
verify/slow_tier/: m8_mixed_fast_snap_only_REPORT.md  m8_mixed_fast_snap_only_results.json  m8_mixed_fast_snap_only_sweep.yaml
verify/t0/: CMakeLists.txt  test_t0_analytic.cpp
verify/t1/: CMakeLists.txt  run_differential.py  test_t1_differential.cpp
verify/t4/: CMakeLists.txt  run_differential.py  test_t4_differential.cpp
verify/t6/: CMakeLists.txt  run_differential.py  test_t6_differential.cpp
verify/tests/: test_compare_dump.py
verify/thresholds/: thresholds.yaml
(+293 files in other folders)
